# horingsportal

./: .envrc  .gitignore  Notes.html  Notes.md  README.md  README_original_toby.md  prompt_suggestions.md  pyproject.toml  serve.sh  test.py
documentation/: guide_to_run_on_server.txt
models/: test_openai.py  test_script.py  vllm_vl_models.py
notebooks/exploratory/: data_overview.ipynb
scripts/ipynb/exploratory/test_set/: construct_test_set.ipynb  test_set_follow_up_cases.ipynb
scripts/sh/: count_file_ext.sh  get_folder_numbers_and_filecount.sh
src/hoering/: __init__.py
src/hoering/models/: instruction_prompt.txt  sandbox.txt  vl_openai.py
src/hoering/models/vl/: vllm_vl_models.py
src/hoering/parser/: extract.py
src/hoering/parser/file_convert/: file_to_format_convert.py  file_to_pdf_convert.py  test.eml
src/hoering/parser/file_convert/resources/: count_files.sh  msg_conversion.py  msg_oft_conversion.py  remove_files_rules.py
src/hoering/scraper/: scrape.py
src/horing/: __init__.py
src/horing/parser/: answers_folder_overview.py
src/horing/parser/file_convert/: H�ringssvar_Justitsministeriet.eml
src/horing/parser/file_convert/resources/: msg_conversion.py
src/horing/parser/vision_extract/: models.py
src/horing/scraper/: scrape.py
