[project]
name = "horing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4==4.12.2",
    "camelot-py==0.11.0",
    "ghostscript==0.7",
    "horing",
    "lxml==4.9.3",
    "numpy==1.26.1",
    "ocrmypdf==15.4.0",
    "openai>=1.61.0",
    "opencv-python==4.8.1.78",
    "openpyxl==3.1.2",
    "pandas==2.1.2",
    "pathlib>=1.0.1",
    "pdf2image>=1.17.0",
    "pdfplumber==0.10.3",
    "pymupdf==1.23.6",
    "requests==2.31.0",
    "rich==13.6.0",
    "tqdm==4.66.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
horing = { workspace = true }
